--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,11 +63,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Helpers\GameObjectHelper.cs" />
+    <Compile Include="Assets\Helpers\ListHelper.cs" />
+    <Compile Include="Assets\Helpers\MathHelper.cs" />
     <Compile Include="Assets\Scripts\BloxUI\Blox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\FilterChar.cs" />
     <Compile Include="Assets\Scripts\BloxUI\IfBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\IntBlox.cs" />
-    <Compile Include="Assets\Scripts\Helpers\ListHelper.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\CodeNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\Functions\IsGreaterThan.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\Functions\IsLesserThan.cs" />
