--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -8,8 +8,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <ProjectGuid>{078285B2-F754-D98F-460C-015E1EC32FFD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -67,33 +66,38 @@
     <Compile Include="Assets\Helpers\GameObjectHelper.cs" />
     <Compile Include="Assets\Helpers\ListHelper.cs" />
     <Compile Include="Assets\Helpers\MathHelper.cs" />
-    <Compile Include="Assets\Scripts\BloxUI\BloxScripts\ArithmeticOperatorBlox.cs" />
-    <Compile Include="Assets\Scripts\BloxUI\BloxScripts\Blox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxBag.cs" />
-    <Compile Include="Assets\Scripts\BloxUI\BloxTerminal.cs" />
-    <Compile Include="Assets\Scripts\BloxUI\BloxScripts\BoolBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxComponentScripts\FieldSwitcher.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxComponentScripts\FilterChar.cs" />
+    <Compile Include="Assets\Scripts\BloxUI\BloxComponentScripts\TrueFalseTextSwitcher.cs" />
+    <Compile Include="Assets\Scripts\BloxUI\BloxScripts\ABlox.cs" />
+    <Compile Include="Assets\Scripts\BloxUI\BloxScripts\ArithmeticOperatorBlox.cs" />
+    <Compile Include="Assets\Scripts\BloxUI\BloxScripts\BoolBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\ForBlox.cs" />
-    <Compile Include="Assets\Scripts\BloxUI\IBloxVariable.cs" />
+    <Compile Include="Assets\Scripts\BloxUI\BloxScripts\IBloxVariable.cs" />
+    <Compile Include="Assets\Scripts\BloxUI\BloxScripts\ICompilable.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\IfBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\IntBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\LogicalOperatorBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\OperatorBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\RootBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\StringBlox.cs" />
+    <Compile Include="Assets\Scripts\BloxUI\BloxTerminal.cs" />
     <Compile Include="Assets\Scripts\BloxUI\Trashbin.cs" />
-    <Compile Include="Assets\Scripts\BloxUI\BloxComponentScripts\TrueFalseTextSwitcher.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\CodeNode.cs" />
+    <Compile Include="Assets\Scripts\Terminal\Nodes\Functions\ArithmeticOperationNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\Functions\IsGreaterThan.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\Functions\IsLesserThan.cs" />
+    <Compile Include="Assets\Scripts\Terminal\Nodes\Functions\LogicalOperationNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\FunctionTypes\BooleanFunctionNode.cs" />
+    <Compile Include="Assets\Scripts\Terminal\Nodes\FunctionTypes\IntegerFunctionNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\ICodeNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\IfNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\LoopRangeNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\RootNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\Types\BooleanNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\Types\IntegerNode.cs" />
+    <Compile Include="Assets\Scripts\Terminal\Nodes\Types\StringNode.cs" />
     <Compile Include="Assets\Scripts\Test.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
@@ -699,7 +703,6 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.2.19f1/Editor/Data/NetStandard/compat/2.0.0/shims/netfx/System.Xml.Serialization.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
