--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,7 +63,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\ErrorMessage.cs" />
     <Compile Include="Assets\Helpers\GameObjectHelper.cs" />
     <Compile Include="Assets\Helpers\ListHelper.cs" />
     <Compile Include="Assets\Helpers\MathHelper.cs" />
@@ -80,14 +79,15 @@
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\IntBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\Interfaces\IBloxVariable.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\Interfaces\ICompilable.cs" />
-    <Compile Include="Assets\Scripts\BloxUI\BloxScripts\Interfaces\IHighlightableBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\LogicalOperatorBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\OperatorBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\RootBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\StringBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxTerminal.cs" />
     <Compile Include="Assets\Scripts\BloxUI\DisplayErrorsButton.cs" />
+    <Compile Include="Assets\Scripts\BloxUI\ErrorMessage.cs" />
     <Compile Include="Assets\Scripts\BloxUI\ErrorPopup.cs" />
+    <Compile Include="Assets\Scripts\BloxUI\HighlightableButton.cs" />
     <Compile Include="Assets\Scripts\BloxUI\Trashbin.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\CodeNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\ForNode.cs" />
