Add dynamic plot placement, and add CubeBot Asset from asset store

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Cube Robot\Scripts\CubeRobot.cs" />
+    <Compile Include="Assets\Cube Robot\Scripts\EngineEffect.cs" />
+    <Compile Include="Assets\Cube Robot\demo\Scripts\Camerademo.cs" />
+    <Compile Include="Assets\Cube Robot\demo\Scripts\CubeRobotdemo.cs" />
     <Compile Include="Assets\Helpers\GameObjectHelper.cs" />
     <Compile Include="Assets\Helpers\ListHelper.cs" />
     <Compile Include="Assets\Helpers\MathHelper.cs" />
@@ -92,8 +96,8 @@
     <Compile Include="Assets\Scripts\Level\Evaluator.cs" />
     <Compile Include="Assets\Scripts\Level\ExpectedBlox.cs" />
     <Compile Include="Assets\Scripts\Level\LevelDescriptor.cs" />
-    <Compile Include="Assets\Scripts\Level\NewEditorScript1.cs" />
     <Compile Include="Assets\Scripts\Level\ObjectiveStep.cs" />
+    <Compile Include="Assets\Scripts\Level\PlotTile.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\CodeNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\ForNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\FunctionTypes\BooleanFunctionNode.cs" />
@@ -148,10 +152,12 @@
     <None Include="Assets\TextMesh Pro\Examples &amp; Extras\Fonts\Oswald-Bold - OFL.txt" />
     <None Include="Assets\TextMesh Pro\Examples &amp; Extras\Fonts\Anton OFL.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
+    <None Include="Assets\Cube Robot\demo\DemoReadme.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface.shader" />
     <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF.shader" />
+    <None Include="Assets\Cube Robot\Readme.txt" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Surface.cginc" />
