--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Assets\Scripts\Helpers\GameObjectHelper.cs" />
     <Compile Include="Assets\Scripts\Helpers\ListHelper.cs" />
     <Compile Include="Assets\Scripts\Helpers\MathHelper.cs" />
+    <Compile Include="Assets\Scripts\Helpers\TaskHelper.cs" />
     <Compile Include="Assets\Scripts\Level\CubotController.cs" />
     <Compile Include="Assets\Scripts\Level\Evaluator.cs" />
     <Compile Include="Assets\Scripts\Level\Exceptions\HoleAheadException.cs" />
@@ -101,7 +102,6 @@
     <Compile Include="Assets\Scripts\Level\Exceptions\NoTileAheadException.cs" />
     <Compile Include="Assets\Scripts\Level\Exceptions\ObstacleAheadException.cs" />
     <Compile Include="Assets\Scripts\Level\ExpectedBlox.cs" />
-    <Compile Include="Assets\Scripts\Level\LevelConfigurator.cs" />
     <Compile Include="Assets\Scripts\Level\LevelDescriptor.cs" />
     <Compile Include="Assets\Scripts\Level\ObjectiveStep.cs" />
     <Compile Include="Assets\Scripts\Level\PlotTile.cs" />
@@ -109,9 +109,9 @@
     <Compile Include="Assets\Scripts\Terminal\Nodes\ForNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\FunctionTypes\BooleanFunctionNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\FunctionTypes\IntegerFunctionNode.cs" />
+    <Compile Include="Assets\Scripts\Terminal\Nodes\FunctionTypes\VoidFunctionNode.cs" />
+    <Compile Include="Assets\Scripts\Terminal\Nodes\Functions\ActionExecutorNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\Functions\ArithmeticOperationNode.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\Functions\IsGreaterThan.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\Functions\IsLesserThan.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\Functions\LogicalOperationNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\ICodeNode.cs" />
     <Compile Include="Assets\Scripts\Terminal\Nodes\IfNode.cs" />
@@ -153,6 +153,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeB.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexZoom.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\WarpTextExample.cs" />
+    <Compile Include="Assets\WalkForwardBlox.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap.shader" />
