--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\ABlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\ArithmeticOperatorBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\BoolBlox.cs" />
+    <Compile Include="Assets\Scripts\BloxUI\BloxScripts\ControlCharacterBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\ForBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\IfBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\IntBlox.cs" />
@@ -84,7 +85,6 @@
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\OperatorBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\RootBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxScripts\StringBlox.cs" />
-    <Compile Include="Assets\Scripts\BloxUI\BloxScripts\WalkForwardBlox.cs" />
     <Compile Include="Assets\Scripts\BloxUI\BloxTerminal.cs" />
     <Compile Include="Assets\Scripts\BloxUI\DisplayErrorsButton.cs" />
     <Compile Include="Assets\Scripts\BloxUI\ErrorMessage.cs" />
