Change terminal folder name to interpreter. Correct evaluation errors

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -95,6 +95,20 @@
     <Compile Include="Assets\Scripts\Helpers\ListHelper.cs" />
     <Compile Include="Assets\Scripts\Helpers\MathHelper.cs" />
     <Compile Include="Assets\Scripts\Helpers\TaskHelper.cs" />
+    <Compile Include="Assets\Scripts\Interpreter\Nodes\CodeNode.cs" />
+    <Compile Include="Assets\Scripts\Interpreter\Nodes\ForNode.cs" />
+    <Compile Include="Assets\Scripts\Interpreter\Nodes\FunctionTypes\BooleanFunctionNode.cs" />
+    <Compile Include="Assets\Scripts\Interpreter\Nodes\FunctionTypes\IntegerFunctionNode.cs" />
+    <Compile Include="Assets\Scripts\Interpreter\Nodes\FunctionTypes\VoidFunctionNode.cs" />
+    <Compile Include="Assets\Scripts\Interpreter\Nodes\Functions\ActionExecutorNode.cs" />
+    <Compile Include="Assets\Scripts\Interpreter\Nodes\Functions\ArithmeticOperationNode.cs" />
+    <Compile Include="Assets\Scripts\Interpreter\Nodes\Functions\LogicalOperationNode.cs" />
+    <Compile Include="Assets\Scripts\Interpreter\Nodes\ICodeNode.cs" />
+    <Compile Include="Assets\Scripts\Interpreter\Nodes\IfNode.cs" />
+    <Compile Include="Assets\Scripts\Interpreter\Nodes\RootNode.cs" />
+    <Compile Include="Assets\Scripts\Interpreter\Nodes\Types\BooleanNode.cs" />
+    <Compile Include="Assets\Scripts\Interpreter\Nodes\Types\IntegerNode.cs" />
+    <Compile Include="Assets\Scripts\Interpreter\Nodes\Types\StringNode.cs" />
     <Compile Include="Assets\Scripts\Level\CubotController.cs" />
     <Compile Include="Assets\Scripts\Level\Exceptions\CodeBloxException.cs" />
     <Compile Include="Assets\Scripts\Level\Exceptions\DivisionByZeroException.cs" />
@@ -108,20 +122,6 @@
     <Compile Include="Assets\Scripts\Level\LevelHandler.cs" />
     <Compile Include="Assets\Scripts\Level\ObjectiveStep.cs" />
     <Compile Include="Assets\Scripts\Level\PlotTile.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\CodeNode.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\ForNode.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\FunctionTypes\BooleanFunctionNode.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\FunctionTypes\IntegerFunctionNode.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\FunctionTypes\VoidFunctionNode.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\Functions\ActionExecutorNode.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\Functions\ArithmeticOperationNode.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\Functions\LogicalOperationNode.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\ICodeNode.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\IfNode.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\RootNode.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\Types\BooleanNode.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\Types\IntegerNode.cs" />
-    <Compile Include="Assets\Scripts\Terminal\Nodes\Types\StringNode.cs" />
     <Compile Include="Assets\Scripts\Test.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
